--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -22,12 +22,12 @@
         android:textSize="16sp" />
 
     <Button
-        android:id="@+id/back_button"
+        android:id="@+id/nav_button"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginLeft="10dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/ic_back"/>
+        android:background="@drawable/ic_home"/>
 
 </RelativeLayout>
